Reetan.Nayak Dev 25/force-app/main/default/objects/Time_Per_Day__c/Time_Per_Day__c.object-meta.xml
<CustomObject>
    <label>Time Per Day</label>
    <nameField>
        <label>Time Per Day Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Times Per Day</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>