Reetan.Nayak Dev 25/force-app/main/default/objects/Time_Per_Day__c/fields/Activity_Or_Case_Time__c.field-meta.xml
<CustomField>
    <fullName>Activity_Or_Case_Time__c</fullName>
    <label>Activity Or Case Time</label>
    <referenceTo>IntiPM_Time__c</referenceTo>
    <relationshipLabel>Times Per Day</relationshipLabel>
    <relationshipName>Times_Per_Day</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>