Reetan.Nayak Dev 25/force-app/main/default/objects/Time_Per_Day__c/fields/comment__c.field-meta.xml
<CustomField>
    <fullName>comment__c</fullName>
    <label>comment</label>
    <type>TextArea</type>
</CustomField>